# Emotion_Detection

./: main.py  pyproject.toml  requirements.txt
App/: Streamlit_App.py
