[project]
name = "emotion-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "av>=14.4.0",
    "keras>=3.11.3",
    "lz4>=4.4.4",
    "matplotlib>=3.4.0",
    "mtcnn>=1.0.0",
    "numpy>=1.21.0",
    "opencv-contrib-python>=4.11.0.86",
    "opencv-python>=4.5.0",
    "opencv-python-headless>=4.11.0.86",
    "pandas>=1.3.0",
    "pillow>=11.3.0",
    "scikit-learn>=1.0.0",
    "seaborn>=0.11.0",
    "streamlit>=1.20.0",
    "streamlit-webrtc>=0.63.4",
    "tensorflow>=2.13.0",
    "tensorflow-model-optimization>=0.8.0",
]
